force-app/main/default/objects/API_Synchronization_Transaction__c/API_Synchronization_Transaction__c.object-meta.xml
<CustomObject>
    <description>Object to track syncing of data &amp; this will help in tracking errors while Sync</description>
    <label>API Synchronization Transaction</label>
    <nameField>
        <displayFormat>AST-{0000}</displayFormat>
        <label>API Synchronization Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Synchronization Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>