force-app/main/default/objects/API_Synchronization_Transaction__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>This Field tells whether transaction is created from Account/Contact(Synchronous) or any other way(Asynchronous).</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asynchronous</fullName>
                <default>true</default>
                <label>Asynchronous</label>
            </value>
            <value>
                <fullName>Synchronous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>