force-app/main/default/objects/API_Synchronization_Transaction__c/fields/Started_From__c.field-meta.xml
<CustomField>
    <fullName>Started_From__c</fullName>
    <description>The object from where this transaction has been initiated.</description>
    <label>Started From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Amendment Request</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>