force-app/main/default/objects/API_Synchronization_Transaction__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <description>Total API Synchronization Item</description>
    <label>Total Items</label>
    <summaryForeignKey>API_Synchronization_Item__c.API_Synchronization_Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>