force-app/main/default/objects/API_Synchronization_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Action at object level which has initiated the transaction.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Get</fullName>
            </value>
            <value>
                <fullName>Post Invoice</fullName>
            </value>
            <value>
                <fullName>Post Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>