force-app/main/default/objects/API_Synchronization_Transaction__c/listViews/Queued.listView-meta.xml
<ListView>
    <fullName>Queued</fullName>
    <columns>NAME</columns>
    <columns>Interface_Log__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Items__c</columns>
    <columns>X3rd_Party_ERP_System__c</columns>
    <columns>External_Tax_System__c</columns>
    <columns>Type__c</columns>
    <columns>Started_From__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Queued</value>
    </filters>
    <label>Queued</label>
</ListView>